<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Do not Disturb</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enabled">Turn on Quiet Time</string>
    <string name="enabled_desc">Enable or disable this application.</string>
    <string name="repeat_on_ring">Ring on Repeat</string>
    <string name="start">Start</string>
    <string name="default_start_time">10:00 PM</string>
    <string name="end">End</string>
    <string name="default_end_time">6:00 AM</string>
    <string name="repeated_calls">Repeated calls</string>
    <string name="silence">Silence</string>
    <string name="contacts">Ring for contacts</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="ring_on_repeat_desc">Your phone will ring if you receive a phone call from the same number twice
        within a span of 10 minutes
    </string>
    <string name="enable_ringer">Ringer is on mute, do you want to unmute?</string>
    <string name="unmute">Unmute</string>
    <string name="past">Past</string>
    <string name="present">Present</string>
    <string name="future">Future</string>
    <string name="errors">Errors</string>
    <string name="action_debug">Debug</string>
    <string name="action_about">About</string>
    <string name="about_desc">Copyright Jayaprakash Pasala. Version 1.7</string>
    <string name="ring_for_contacts_desc">Ring the phone when a person from address book calls</string>
    <string-array name="silence_options_2">
        <item>Always</item>
        <item>When phone is locked</item>
    </string-array>
</resources>
