<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".MainActivity$PlaceholderFragment" android:baselineAligned="false">


            <Switch
                android:id="@+id/dnd_enabled"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_contentt"
                android:text="@string/enabled"
                />

        <TextView
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="2dp"
                   android:layout_marginLeft="5dp"
                   android:layout_marginBottom="2dp"
                   android:text="@string/enabled_desc"
                   android:id="@+id/title_label"
                   android:gravity="center_vertical"
                   android:layout_below="@id/dnd_enabled"
                   android:layout_alignParentLeft="true"
          />



        <Switch
                android:id="@+id/ring_for_contacts"
                android:layout_width="fill_parent"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_height="wrap_content"
                android:text="@string/contacts"
                android:layout_below="@id/linearLayout2"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="3dp"
            android:text="@string/ring_for_contacts_desc"
            android:id="@+id/ring_for_contacts_desc"
            android:gravity="center_vertical"
            android:layout_below="@id/ring_for_contacts"
            android:layout_alignParentLeft="true"
            />


    <Switch
            android:id="@+id/ring_on_repeat"
            android:layout_width="fill_parent"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_height="wrap_content"
            android:text="@string/repeat_on_ring"
            android:layout_below="@id/ring_for_contacts_desc"
            />

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="5dp"
            android:text="@string/ring_on_repeat_desc"
            android:id="@+id/ring_on_repeat_desc"
            android:gravity="center_vertical"
            android:layout_below="@id/ring_on_repeat"
            android:layout_alignParentLeft="true"
            />

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_label"
            android:orientation="horizontal"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="3dp"
            >
    <TextView
            android:id="@+id/start_label"
            android:text="@string/start"
            android:textAppearance="@android:style/TextAppearance.Holo.Widget"
            android:layout_width="0dp"
            android:gravity="center_vertical"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            />

    <Button
            android:id="@+id/start_time"
            android:layout_height="fill_parent"
            android:text="@string/default_start_time"
            android:onClick="showTimePickerDialog"
            android:tag="1320"
            android:layout_width="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="3dp">
    <TextView
            android:id="@+id/end_label"
            android:text="@string/end"
            android:textAppearance="@android:style/TextAppearance.Holo.Widget"
            android:layout_width="0dp"
            android:gravity="center_vertical"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            />

    <Button
            android:id="@+id/end_time"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/default_end_time"
            android:onClick="showTimePickerDialog"
            android:tag="1320"/>
    </LinearLayout>
    <!--TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

        <Switch
                android:id="@+id/ring_on_repeat"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/repeat_on_ring"
                android:layout_weight="100"/>
    </TableRow>

    <TableRow android:layout_width="fill_parent"
              android:layout_height="0dp"
              android:layout_weight="2">
        <TextView
                android:layout_width="wrap_content"
                android:text="@string/ring_on_repeat_desc"/>
    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

        <TextView
                android:text="@string/start"
                android:layout_weight="100"
                android:layout_width="wrap_content"/>

        <Button
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_start_time"
                android:onClick="showTimePickerDialog"
                android:tag="1320"
                android:layout_weight="100"/>
    </TableRow>

    <TableRow android:layout_width="fill_parent"
              android:layout_height="0dp"
              android:layout_weight="2">
        <TextView
                android:text="@string/end"
                android:layout_weight="100"
                android:layout_width="wrap_content"/>

        <Button
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_end_time"
                android:tag="360"
                android:onClick="showTimePickerDialog"
                android:layout_weight="100"/>
    </TableRow-->
            <!--<view android:layout_height="fill_parent"-->
                  <!--android:layout_width="1dp"-->
                  <!--android:background="@android:color/darker_gray"/>-->
            <!--<View android:layout_width="fill_parent"-->
                    <!--android:layout_height="1dp"-->
                    <!--android:background="@android:color/darker_gray"/>-->

            <!--TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/enabled_desc"
                    android:id="@+id/title_label"
                    android:gravity="center_vertical"/-->
            <!--<View-->
                    <!--android:layout_width="fill_parent"-->
                    <!--android:layout_height="1dp"-->
                    <!--android:id="@+id/separator"-->
                    <!--android:visibility="visible"-->
                    <!--android:background="@android:color/darker_gray"/>-->



</RelativeLayout>